# ifcb-classification-app

./: .dockerignore  .gitignore  Dockerfile  README.md  benchmark.py  main.py  model.py  pyproject.toml  requirements.txt  session.py
data/models/SMHI-NIVA-ResNet50-V5/: about.md  classes.txt  thresholds.json
data/models/ifcb-plankton-resnet50/: classes.txt  thresholds.json
utils/: CustomTransforms.py
