[project]
name = "ifcb-classification-app"
version = "0.1.0"
description = "Classify phytoplankton images using a fine-tuned ResNet-50"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Anders Torstensson" },
]
dependencies = [
    "gradio==6.5.1",
    "torch==2.10.0",
    "torchvision==0.25.0",
]
