[project]
name = "ifcb-classification-app"
version = "0.1.2"
description = "Classify phytoplankton images using a fine-tuned ResNet-50"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Anders Torstensson" },
]
dependencies = [
    "gradio==6.5.1",
    "pillow==11.3.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
]
